--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,10 +29,12 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   cupertino_icons: ^1.0.6
+  dots_indicator: ^3.0.0
   flutter:
     sdk: flutter
+  flutter_localizations:
+    sdk: flutter
   svg_flutter: ^0.0.1
-
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
 
@@ -90,3 +92,5 @@ flutter_assets:
   assets_path: assets/images
   output_path: lib/core/utils
   filename: assets.dart
+flutter_intl:
+  enabled: true
