link app with firebase

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -9,5 +9,6 @@
         "جوجل",
         "دخول",
         "فيسبوك"
-    ]
+    ],
+    "java.configuration.updateBuildConfiguration": "interactive"
 }
