--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -30,6 +30,7 @@ environment:
 dependencies:
   cupertino_icons: ^1.0.6
   dots_indicator: ^3.0.0
+  firebase_core: ^2.24.2
   flutter:
     sdk: flutter
   flutter_localizations:
