finish sign up logic

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,13 +2,45 @@
     "cmake.sourceDirectory": "/home/ahmedramy/FlutterProjects/Fruit-app/linux/flutter",
     "cmake.configureOnOpen": true,
     "cSpell.words": [
+        "Autovalidate",
+        "Cupertino",
+        "dartz",
+        "Dont",
+        "entites",
+        "fruitapp",
         "khorizontal",
         "Perferences",
+        "signup",
+        "إنشاء",
+        "الإلكتروني",
+        "الاسم",
+        "البريد",
+        "الحقل",
+        "الخاصة",
+        "الرقم",
+        "السري",
+        "الشروط",
+        "المرور",
+        "الموافقة",
+        "بالتسجيل",
         "بواسطة",
         "تسجيل",
+        "توافق",
+        "جديد",
         "جوجل",
+        "حساب",
+        "خلال",
         "دخول",
-        "فيسبوك"
+        "ضعيف",
+        "فإنك",
+        "فيسبوك",
+        "كامل",
+        "كلمة",
+        "للاستمرار",
+        "مسبقا",
+        "مطلوب",
+        "نسيت",
+        "والأحكام"
     ],
     "java.configuration.updateBuildConfiguration": "interactive"
 }
