--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -28,13 +28,20 @@ environment:
 # the latest version available on pub.dev. To see which dependencies have newer
 # versions available, run `flutter pub outdated`.
 dependencies:
+  bloc: ^8.1.4
   cupertino_icons: ^1.0.6
+  dartz: ^0.10.1
   dots_indicator: ^3.0.0
+  firebase_auth: ^4.16.0
   firebase_core: ^2.24.2
   flutter:
     sdk: flutter
+  flutter_bloc: ^8.1.6
   flutter_localizations:
     sdk: flutter
+  get_it: ^7.7.0
+  intl: ^0.19.0
+  loading_animation_widget: ^1.2.1
   shared_preferences: ^2.2.3
   svg_flutter: ^0.0.1
 dev_dependencies:
