--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -12,16 +12,21 @@
         "Perferences",
         "signup",
         "إنشاء",
+        "اتصالك",
+        "اخري",
         "الإلكتروني",
         "الاسم",
         "البريد",
         "الحقل",
         "الخاصة",
+        "الرجاء",
         "الرقم",
         "السري",
         "الشروط",
+        "المحاولة",
         "المرور",
         "الموافقة",
+        "بالانترنت",
         "بالتسجيل",
         "بواسطة",
         "تسجيل",
@@ -31,6 +36,7 @@
         "حساب",
         "خلال",
         "دخول",
+        "صحيح",
         "ضعيف",
         "فإنك",
         "فيسبوك",
