--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,7 @@ environment:
 # versions available, run `flutter pub outdated`.
 dependencies:
   bloc: ^8.1.4
+  crypto: ^3.0.3
   cupertino_icons: ^1.0.6
   dartz: ^0.10.1
   dots_indicator: ^3.0.0
@@ -37,12 +38,15 @@ dependencies:
   flutter:
     sdk: flutter
   flutter_bloc: ^8.1.6
+  flutter_facebook_auth: ^7.0.1
   flutter_localizations:
     sdk: flutter
   get_it: ^7.7.0
+  google_sign_in: ^6.2.1
   intl: ^0.19.0
   loading_animation_widget: ^1.2.1
   shared_preferences: ^2.2.3
+  sign_in_with_apple: ^6.1.1
   svg_flutter: ^0.0.1
 dev_dependencies:
   flutter_launcher_icons: ^0.13.1
