create database service

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -8,6 +8,7 @@
         "dartz",
         "Dont",
         "entites",
+        "Firestore",
         "fruitapp",
         "khorizontal",
         "Perferences",
