build home custom search field

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -15,6 +15,7 @@
         "signin",
         "signup",
         "إنشاء",
+        "ابحث",
         "اتصالك",
         "اخري",
         "الإلكتروني",
