create best salling item  and best salling list

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -27,6 +27,7 @@
         "الرقم",
         "السري",
         "الشروط",
+        "الكيلو",
         "المحاولة",
         "المحاوله",
         "المرور",
@@ -37,6 +38,7 @@
         "تسجيل",
         "توافق",
         "جديد",
+        "جنية",
         "جوجل",
         "حساب",
         "خلال",
@@ -44,6 +46,7 @@
         "صحيح",
         "ضعيف",
         "فإنك",
+        "فراولة",
         "فيسبوك",
         "كامل",
         "كلمة",
